# simple_agent

./: .gitignore  README.md  bug.py  call_openai.py  intro_to_agents.ipynb  intro_to_agents.py  intro_to_agents_bedrock.ipynb  pyproject.toml
data/: file1.md
my_data/: contextual_vector_db.pkl  processed_documents.jsonl
researcher/: __init__.py  agent.py  config.py  console.py  context_retriever.ipynb  main.py  mistral_helper.py  preprocess.py  prompts.py  rag.py  researcher.py  state.py  tool_calling.py  tools.py
researcher/prompts/: mom.txt  nice_brother.txt  phd_advisor.txt  reviewer_number_2.txt
workdir/: manuscript.txt  manuscript_20250512_135959.txt
