[tool.poetry]
name = "researcher"
version = "0.1.0"
description = "AI Research Assistant"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
openai = "^1.0.0"
chromadb = "^0.4.0"
weave = "^0.1.0"
rich = "^13.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
