[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "researcher"
version = "0.1.0"
description = "AI Research Assistant"
authors = [
    {name = "Thomas Capelle", email = "thomas@wandb.com"}
]
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
    "weave>=0.1.0",
    "rich>=13.0.0",
    "ipykernel>=6.29.5",
    "mistralai[gcp]>1.0.0",
    "simple-parsing>=0.1.7",
    "pypdf2>=3.0.1",
    "mistralai>1.0",
    "tiktoken>=0.9.0",
]
readme = "README.md"
license = {text = "MIT"}
keywords = ["ai", "research", "assistant"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]

[project.scripts]
"researcher" = "researcher.main:main"
"researcher.prepare" = "researcher.rag:prepare"


[tool.setuptools]
packages = ["researcher"]

[tool.setuptools.package-data]
researcher = ["*.json", "*.yaml", "*.txt"]
